--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -21,12 +21,12 @@
 
 <StorageList xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- internal emulated storage -->
-    <storage
-             android:storageDescription="@string/storage_internal"
-             android:emulated="true"
+    <!-- internal SD card -->
+    <storage android:mountPoint="/storage/sdcard0"
+             android:storageDescription="@string/storage_sd_card"
              android:primary="true"
-             android:mtpReserve="100" />
+             android_removeable="true"
+             android:allowMassStorage="true" />
 
     <!-- external usb storage -->
     <storage android:mountPoint="/storage/usbdisk"
