--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -25,8 +25,8 @@
     <storage android:mountPoint="/storage/sdcard0"
              android:storageDescription="@string/storage_sd_card"
              android:primary="true"
-             android_removeable="true"
-             android:allowMassStorage="true" />
+             android_removeable="false"
+             android:allowMassStorage="false" />
 
     <!-- external usb storage -->
     <storage android:mountPoint="/storage/usbdisk"
