--- a/overlay/packages/apps/Gallery2/res/values/config.xml
+++ b/overlay/packages/apps/Gallery2/res/values/config.xml
@@ -19,4 +19,6 @@
 
 <resources>
     <bool name="useVideoSnapshotWorkaround">true</bool>
+    <bool name="needsEarlyVideoSize">true</bool>
+    <bool name="enableVideoHDR">true</bool>
 </resources>
