n1: Enable new torch config

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -211,4 +211,6 @@
     <!-- True if the gesture service should be started at system start -->
     <bool name="config_enableGestureService">false</bool>
 
+    <!-- Enable flashlight -->
+    <bool name="config_enableTorch">true</bool>
 </resources>
