--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -216,10 +216,10 @@
 
     <!-- The list absolute paths of jar/apk files containing the device specific handlers,
          delimited by File.pathSeparator, which defaults to ":" on Android -->
-    <string name="config_deviceHandlersLib" translatable="false">/system/framework/com.cyanogenmod.n1.keyhandler.jar</string>
+    <string name="config_deviceHandlersLib" translatable="false">/system/app/ConfigPanel.apk</string>
 
     <!-- Full qualified name of the class that implements
          com.android.internal.os.DeviceKeyHandler interface. -->
-    <string name="config_deviceKeyHandlerClass" translatable="false">com.cyanogenmod.n1.keyhandler.KeyHandler</string>
+    <string name="config_deviceKeyHandlerClass" translatable="false">com.cyanogenmod.n1.configuration.KeyHandler</string>
 
 </resources>
