--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -25,13 +25,14 @@
     <storage android:mountPoint="/storage/sdcard0"
              android:storageDescription="@string/storage_sd_card"
              android:primary="true"
-             android_removeable="false"
+             android:removable="false"
              android:allowMassStorage="false" />
 
     <!-- external usb storage -->
     <storage android:mountPoint="/storage/usbdisk"
              android:storageDescription="@string/storage_usb"
              android:primary="false"
-             android:removable="true" />
+             android:removable="true"
+             android:allowMassStorage="false" />
 
 </StorageList>
