Externalize more resources

--- a/configpanel/res/xml/oclick_panel.xml
+++ b/configpanel/res/xml/oclick_panel.xml
@@ -2,44 +2,43 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <Preference
-        android:key="oclick_connect"
-        android:title="Connect to O-Click" />
+        android:key="oclick_connect" />
 
     <PreferenceCategory
         android:key="oclick_action_category"
         android:enabled="false"
-        android:title="Actions">
+        android:title="@string/action_category_title">
 
 	    <CheckBoxPreference
                 android:defaultValue="true"
 		android:key="oclick_take_snapshot"
-		android:title="Remote camera shutter"
-                android:summary="Single click to take picture" />
+		android:title="@string/oclick_take_snapshot_title"
+		android:summary="@string/oclick_take_snapshot_summary" />
 
 	    <CheckBoxPreference
                 android:defaultValue="true"
 		android:key="oclick_find_my_phone"
-		android:title="Phone locator"
-                android:summary="Double click to find phone" />
+		android:title="@string/oclick_find_my_phone_title"
+		android:summary="@string/oclick_find_my_phone_summary" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
         android:key="oclick_alert_category"
         android:enabled="false"
-        android:title="Alerts">
+        android:title="@string/alert_category_title">
 
 	    <CheckBoxPreference
                 android:defaultValue="true"
 		android:key="oclick_fence"
-		android:title="Proximity alert"
-                android:summary="Alert when not near phone"  />
+		android:title="@string/oclick_fence_title"
+		android:summary="@string/oclick_fence_summary"  />
 
 	    <CheckBoxPreference
                 android:defaultValue="true"
 		android:key="oclick_disconnect_alert"
-		android:title="Out of range alert"
-                android:summary="Alert when device is outside reach of O-Click" />
+		android:title="@string/oclick_disconnect_alert_title"
+		android:summary="@string/oclick_disconnect_alert_summary" />
 
     </PreferenceCategory>
 
