--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -23,16 +23,16 @@
 
     <!-- internal SD card -->
     <storage android:mountPoint="/storage/sdcard0"
-             android:storageDescription="@string/storage_sd_card"
+             android:storageDescription="@string/storage_internal"
              android:primary="true"
+             android:emulated="false"
              android:removable="false"
-             android:allowMassStorage="false" />
+             android:allowMassStorage="true" />
 
     <!-- external usb storage -->
     <storage android:mountPoint="/storage/usbdisk"
              android:storageDescription="@string/storage_usb"
              android:primary="false"
-             android:removable="true"
-             android:allowMassStorage="false" />
+             android:removable="true" />
 
 </StorageList>
