n1: Startup cleanup and other 4.4 bringup misc bits
 * Fix storage
 * Enable interleaved scan for BLE
 * Remove dead services and reorganize

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -23,11 +23,11 @@
 
     <!-- internal SD card -->
     <storage android:mountPoint="/storage/sdcard0"
-             android:storageDescription="@string/storage_internal"
+             android:storageDescription="@string/storage_sd_card"
              android:primary="true"
              android:emulated="false"
              android:removable="false"
-             android:allowMassStorage="true" />
+             android:mtpReserve="100" />
 
     <!-- external usb storage -->
     <storage android:mountPoint="/storage/usbdisk"
