n1: camera: Avoid multiple preview stop
 * Fix for heap corruption issue

--- a/overlay/packages/apps/Gallery2/res/values/config.xml
+++ b/overlay/packages/apps/Gallery2/res/values/config.xml
@@ -20,4 +20,5 @@
 <resources>
     <bool name="needsEarlyVideoSize">true</bool>
     <bool name="enableVideoHDR">true</bool>
+    <bool name="previewStopsDuringSnapshot">true</bool>
 </resources>
